--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multiline": "^0.2.0",
     "semver": "^2.2.1",
     "sqlite3": "^2.2.3",
+    "string": "^1.8.1",
     "winston": "^0.7.2",
     "wiredep": "^1.1.1"
   },
